# NGBoost_CreditRiskAnalysis

./: .gitignore  Explore_Hyperparams.ipynb  NGBoost_CreditRiskAnalysis.ipynb  NGBoost_CreditRiskAnalysis_Modelling.ipynb  NGBoost_CreditRiskAnalysis_SecondExperiment.ipynb  NGBoost_SecondExperiment.ipynb  README.md  Untitled.ipynb  constants.py  data_definitiva_modelo.csv  data_pre_final_hyperparams.csv  first_experiment_new_additional_data.csv  mix_params_with_gains.csv  ngbtest_new.p  plot_utils.py  pyproject.toml  utils.py
ngboostcreditriskanalysis/: constants.py  experiments.py  plot_utils.py  utils.py
notebooks/: Untitled.ipynb  iterators_primer_exp.ipynb
